--- a/StarProject/Views/Users/Index.cshtml
+++ b/StarProject/Views/Users/Index.cshtml
@@ -142,7 +142,7 @@
 			<!-- 欄位 -->
 			<!-- 欄位標頭 -->
 			<thead class="table-light">
-				<tr class="d-flex">
+				<tr>
 					<th style="width:60px" class="text-center">
 						<input class="form-check-input" type="checkbox" value="" id="checkAll"
 							   data-bs-toggle="tooltip" data-bs-placement="bottom"
@@ -157,10 +157,10 @@
 					<th class="px-3 fw-bold text-center" style="width:150px;">
 						Phone
 					</th>
-					<th class="px-3 fw-bold text-center flex-grow-1" style="min-width:200px;">
+					<th class="px-3 fw-bold text-center" style="min-width:200px;">
 						Email
 					</th>
-					<th class="px-3 fw-bold text-center flex-grow-1" style="min-width:200px;">
+					<th class="px-3 fw-bold text-center" style="min-width:200px;">
 						Address
 					</th>
 					<th class="px-3 fw-bold text-center" style="width:110px;">
