--- a/StarProject/Views/Emps/Edit.cshtml
+++ b/StarProject/Views/Emps/Edit.cshtml
@@ -128,8 +128,8 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="儲存" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">取消</a>
+                <input type="submit" value="儲存" class="btn btn-lg" style="background-color:#2B4C8C;color:white" />
+                <a asp-action="Index" class="btn btn-secondary btn-lg">取消</a>
             </div>
         </form>
     </div>
