--- a/StarProject/Views/Emps/_EmpRowsPartial.cshtml
+++ b/StarProject/Views/Emps/_EmpRowsPartial.cshtml
@@ -72,7 +72,7 @@
         <td style="width:116px">
             <div class="btn-group" role="group">
                 <button type="button"
-                        class="btn btn-sm btn-outline-primary btn-detail"
+                        class="btn btn-color btn-sm btn-detail"
                         data-bs-toggle="modal"
                         data-bs-target="#detailModal"
                         data-id="@item.No"
