--- a/StarProject/Views/LostInfo/Create.cshtml
+++ b/StarProject/Views/LostInfo/Create.cshtml
@@ -55,72 +55,82 @@
     </style>
 </head>
 
-<h1 class="fw-bold">遺失物新增</h1>
-<hr />
-<div class="row">
-    <div class="d-flex">
-        <form asp-action="Create" method="post" enctype="multipart/form-data" class="col-md-5">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group mb-2">
-                <label asp-for="Name" class="control-label fw-bold fs-5"></label><span asp-validation-for="Name" class="text-danger ms-3"></span>
-                <input asp-for="Name" class="form-control" />
-            </div>
-            <div class="form-group mb-2">
-                <label asp-for="Category" class="control-label fw-bold fs-5"></label><span asp-validation-for="Category" class="text-danger  ms-3"></span>
-                <select asp-for="Category" class="form-select">
-                    <option value="一般物品">一般物品</option>
-                    <option value="電子產品">電子產品</option>
-                    <option value="證件">證件</option>
-                    <option value="金融票證">金融票證</option>
-                    <option value="其他">其他</option>
-                </select>
-            </div>
-            <div class="form-group mb-2">
-                <label asp-for="Desc" class="control-label fw-bold fs-5"></label><span asp-validation-for="Desc" class="text-danger  ms-3"></span>
-                <textarea asp-for="Desc" class="form-control" rows="10" placeholder="輸入物品描述..." style="resize: none;"></textarea>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImageFile" class="control-label fw-bold fs-5"></label><span asp-validation-for="ImageFile" class="text-danger ms-3"></span>
-                <input asp-for="ImageFile" class="form-control" type="file" onchange="previewImage(event)" />
-            </div>
-            <div class="form-group mb-2">
-                <label asp-for="FoundDate" class="control-label fs-5 fw-bold"></label><span asp-validation-for="FoundDate" class="text-danger  ms-3"></span>
-                <input asp-for="FoundDate" class="form-control" max="@DateTime.Now.ToString("yyyy-MM-dd")" />
-            </div>
-            <div class="form-group mb-2">
-                <label asp-for="Status" class="control-label fw-bold fs-5"></label><span asp-validation-for="Status" class="text-danger  ms-3"></span>
-                <select asp-for="Status" class="form-select" id="status">
-                    <option value="待領取">待領取</option>
-                    <option value="已領取">已領取</option>
-                </select>
-            </div>
-            <div id="ownerInfo" style="display:none;">
+<div class="position-relative">
+    <h1 class="fw-bold">遺失物新增</h1>
+    <hr />
+    <div class="row">
+        <div class="d-flex">
+            <form asp-action="Create" method="post" enctype="multipart/form-data" class="col-md-5">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group mb-2">
-                    <label asp-for="OwnerName" class="control-label fw-bold fs-5"></label><span asp-validation-for="OwnerName" class="text-danger"></span>
-                    <input asp-for="OwnerName" class="form-control" />
+                    <label asp-for="Name" class="control-label fw-bold fs-5"></label><span asp-validation-for="Name" class="text-danger ms-3"></span>
+                    <input asp-for="Name" class="form-control" id="inputName" />
+                </div>
+                <div class="form-group mb-2">
+                    <label asp-for="Category" class="control-label fw-bold fs-5"></label><span asp-validation-for="Category" class="text-danger  ms-3"></span>
+                    <select asp-for="Category" class="form-select" id="categorySelect">
+                        <option value="一般物品">一般物品</option>
+                        <option value="電子產品">電子產品</option>
+                        <option value="證件">證件</option>
+                        <option value="金融票證">金融票證</option>
+                        <option value="其他">其他</option>
+                    </select>
+                </div>
+                <div class="form-group mb-2">
+                    <label asp-for="Desc" class="control-label fw-bold fs-5"></label><span asp-validation-for="Desc" class="text-danger  ms-3"></span>
+                    <textarea asp-for="Desc" class="form-control" rows="10" placeholder="輸入物品描述..." style="resize: none;" id="inputDesc"></textarea>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ImageFile" class="control-label fw-bold fs-5"></label><span asp-validation-for="ImageFile" class="text-danger ms-3"></span>
+                    <input asp-for="ImageFile" class="form-control" type="file" onchange="previewImage(event)" />
+                </div>
+                <div class="form-group mb-2">
+                    <label asp-for="FoundDate" class="control-label fs-5 fw-bold"></label><span asp-validation-for="FoundDate" class="text-danger  ms-3"></span>
+                    <input asp-for="FoundDate" class="form-control" max="@DateTime.Now.ToString("yyyy-MM-dd")" id="inputFoundDate" />
+                </div>
+                <div class="form-group mb-2">
+                    <label asp-for="Status" class="control-label fw-bold fs-5"></label><span asp-validation-for="Status" class="text-danger  ms-3"></span>
+                    <select asp-for="Status" class="form-select" id="status">
+                        <option value="待領取">待領取</option>
+                        <option value="已領取">已領取</option>
+                    </select>
+                </div>
+                <div id="ownerInfo" style="display:none;">
+                    <div class="form-group mb-2">
+                        <label asp-for="OwnerName" class="control-label fw-bold fs-5"></label><span asp-validation-for="OwnerName" class="text-danger"></span>
+                        <input asp-for="OwnerName" class="form-control" />
+                    </div>
+
+                    <div class="form-group mb-2">
+                        <label asp-for="OwnerPhone" class="control-label fw-bold fs-5"></label><span asp-validation-for="OwnerPhone" class="text-danger"></span>
+                        <input asp-for="OwnerPhone" class="form-control" />
+                    </div>
                 </div>
 
-                <div class="form-group mb-2">
-                    <label asp-for="OwnerPhone" class="control-label fw-bold fs-5"></label><span asp-validation-for="OwnerPhone" class="text-danger"></span>
-                    <input asp-for="OwnerPhone" class="form-control" />
+                <div class="form-group d-flex gap-2 mt-2 text-distance">
+                    <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5 text-distance">
+                        <i class="fa-solid fa-plus"></i>新增
+                    </button>
+                    <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
                 </div>
-            </div>
+            </form>
 
-            <div class="form-group d-flex gap-2 mt-2 text-distance">
-                <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5 text-distance">
-                    <i class="fa-solid fa-plus"></i>新增
-                </button>
-                <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
-            </div>
-        </form>
-
-        <!-- 預覽區域 -->
-        <div class="flex-fill d-flex justify-content-center">
-            <div class="img500px mb-3">
-                <img id="preview" src="#" alt="圖片預覽" />
+            <!-- 預覽區域 -->
+            <div class="flex-fill d-flex justify-content-center">
+                <div class="img500px mb-3">
+                    <img id="preview" src="#" alt="圖片預覽" />
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="position-absolute top-0 end-0 m-2 me-4">
+        <button type="button" id="fillTestData" class="btn btn-light fw-bold fs-6 d-flex justify-content-center align-items-center"
+                style="width:40px; height:40px; border-radius:50%; border: 1px solid #D0CBCB;">
+            <i class="fa-solid fa-wand-sparkles"></i>
+        </button>
+    </div>
+
 </div>
 
 @section Scripts {
@@ -128,6 +138,15 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script>
+        $("#fillTestData").on("click", function() {
+                $("#inputName").val("Apple iPhone");
+                $("#categorySelect").val("電子產品").trigger("change");
+                $('#inputDesc').val("一支iPhone 16 pro Max，沙漠色鈦金屬，背面有吉伊卡哇貼紙");
+                $('#inputFoundDate').val("2025-09-19");
+                $('#status').val("待領取").trigger("change");
+        })
+
+
         function previewImage(event) {
             const file = event.target.files[0];
             if (file) {
@@ -154,6 +173,6 @@
 
             // 下拉選單改變時執行
             statusSelect.addEventListener("change", toggleOwnerInfo);
-        });
+        })
     </script>
 }
