新增活動、優惠一鍵輸入

--- a/StarProject/Views/Events/Create.cshtml
+++ b/StarProject/Views/Events/Create.cshtml
@@ -31,8 +31,8 @@
     <h1 class="fw-bold mb-0">快速新增活動</h1>
 
     <!-- 一鍵輸入按鈕（右上角） -->
-    <button type="button" class="btn btn-search fw-bold" id="demoDataBtn" onclick="fillDemoData()">
-        <i class="fa-solid fa-wand-magic-sparkles"></i> 一鍵輸入
+    <button type="button" class="btn btn-light fw-bold fs-6 d-flex justify-content-center align-items-center" id="demoDataBtn" onclick="fillDemoData()" style="width:40px; height:40px; border-radius:50%; border: 1px solid #D0CBCB;">
+        <i class="fa-solid fa-wand-sparkles"></i>
     </button>
 </div>
 <hr />
