--- a/StarProject/Views/Promotion/Create.cshtml
+++ b/StarProject/Views/Promotion/Create.cshtml
@@ -21,10 +21,12 @@
 
 <!--一鍵輸入資料-->
 <div class="d-flex justify-content-end mb-3">
-    <button type="button" class="btn btn-search fw-bold" id="demoDataBtn" onclick="fillDemoData()">
-        <i class="fa-solid fa-wand-magic-sparkles"></i> 一鍵輸入
+    <button type="button" class="btn btn-light fw-bold fs-6 d-flex justify-content-center align-items-center" id="demoDataBtn" onclick="fillDemoData()" style="width:40px; height:40px; border-radius:50%; border: 1px solid #D0CBCB;">
+        <i class="fa-solid fa-wand-sparkles"></i>
     </button>
 </div>
+
+
 <div class="card shadow-sm">
     <div class="card-header bg-primary text-white">
         <h4 class="mb-0"><i class="fi fi-ss-money-wings me-2"></i>新增優惠券</h4>
